Some minor stuff

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 p {
-    color: rgb(180, 238, 93);
+    color: #b4ee5d;
     font-style: oblique;
     font-family: 'Chiller';
     font-size: 1.6vw;
