Good enough for me

--- a/styles/somestyle.css
+++ b/styles/somestyle.css
@@ -79,6 +79,6 @@ ul {
     padding: 0%;
     border: none;
     box-sizing: content-box;
-    background-color: #de2478;;
+    background-color: #de2478;
     color: #de2478;
 }
